--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
   <div class="header">
     <div class="div-img">
-      <img src="/img/74976.png" alt="Imagem Caderno e caneta">
+      <img src="img/74976.png" alt="Imagem Caderno e caneta">
     </div>
     <div class="div-header">
       <h2>Header</h2>
     </div>
     <div class="div-logo">
-      <img src="/img/marca-if-baiano-campus-itapetinga-vertical.png" alt="Logo IF Baiano">
+      <img src="img/marca-if-baiano-campus-itapetinga-vertical.png" alt="Logo IF Baiano">
     </div>
   </div>
 
@@ -50,19 +50,19 @@
       <h3>Redes Sociais</h3>
       <ul>
         <li>
-          <img src="/img/icons8-whatsapp-48.png" alt="WhatsApp logo">
+          <img src="img/icons8-whatsapp-48.png" alt="WhatsApp logo">
         </li>
         <li>
-          <img src="/img/icons8-facebook-48.png" alt="Facebook logo">
+          <img src="img/icons8-facebook-48.png" alt="Facebook logo">
         </li>
         <li>
-          <img src="/img/icons8-instagram-48.png" alt="Instagram logo">
+          <img src="img/icons8-instagram-48.png" alt="Instagram logo">
         </li>
         <li>
-          <img src="/img/icons8-linkedin-48.png" alt="LinkedIn logo">
+          <img src="img/icons8-linkedin-48.png" alt="LinkedIn logo">
         </li>
         <li>
-          <img src="/img/icons8-youtube-48.png" alt="YouTube logo">
+          <img src="img/icons8-youtube-48.png" alt="YouTube logo">
         </li>
       </ul>
     </div>
